@@ -1,5 +1,6 @@
 * Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.4-0
 - Drop Hiera 4 support
+- Update badges and contribution guide URL in README.md
 
 * Wed Jul 18 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.4-0
 - Add support for OEL and Puppet 5
